<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".setting.SettingsActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D2070707"
        >

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:visibility="gone"
            android:background="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_arrow"
                app:tint="@color/white"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/back_button" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="10dp"
                >

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="10dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="10dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="10dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_end="10dp" />

                <TextView
                    android:id="@+id/serverLable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_details"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/guideend"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintTop_toTopOf="@id/guideTop"
                    />

                <EditText
                    android:id="@+id/devicename"
                    android:hint="@string/device_name"
                    android:textColor="@color/textcolor"
                    android:layout_width="0dp"
                    android:text="TC21"
                    android:layout_height="wrap_content"
                    android:autofillHints="Device Name"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="@id/guideend"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintTop_toBottomOf="@id/serverLable"
                    />
                <EditText
                    android:id="@+id/schema"
                    android:hint="@string/http_https"
                    android:textColor="@color/textcolor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="http/https"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="http"
                    app:layout_constraintTop_toBottomOf="@id/devicename"
                    app:layout_constraintEnd_toEndOf="@id/guideend"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    />
                <EditText
                    android:id="@+id/server"
                    android:hint="@string/server"
                    android:textColor="@color/textcolor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="Server"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="demo.inter-concept.co.uk"
                    app:layout_constraintEnd_toEndOf="@id/guideend"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintTop_toBottomOf="@id/schema"
                    />
                <EditText
                    android:id="@+id/port"
                    android:hint="@string/port"
                    android:textColor="@color/textcolor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="Port"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="8090"
                    app:layout_constraintTop_toBottomOf="@id/server"
                    app:layout_constraintEnd_toEndOf="@id/guideend"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    />

                <EditText
                    android:id="@+id/database"
                    android:hint="@string/database"
                    android:textColor="@color/textcolor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="Database"
                    android:layout_marginTop="10dp"
                    android:text="sbodemogb"
                    app:layout_constraintTop_toBottomOf="@id/port"
                    app:layout_constraintEnd_toEndOf="@id/guideend"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    android:inputType="text" />

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/database"
                    app:layout_constraintEnd_toEndOf="@id/guideend"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>